@@ -9,7 +9,6 @@ package org.eclipse.rdf4j.common.lang;
 
 import java.nio.charset.Charset;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -64,7 +63,7 @@ public class FileFormat {
 	 * @param fileExtension The (default) file extension for the file format, e.g. <var>txt</var> for plain text files.
 	 */
 	public FileFormat(String name, String mimeType, Charset charset, String fileExtension) {
-		this(name, Arrays.asList(mimeType), charset, Arrays.asList(fileExtension));
+		this(name, List.of(mimeType), charset, List.of(fileExtension));
 	}
 
 	/**
@@ -79,7 +78,7 @@ public class FileFormat {
 	 *                       item in the list is interpreted as the default file extension for the format.
 	 */
 	public FileFormat(String name, String mimeType, Charset charset, Collection<String> fileExtensions) {
-		this(name, Arrays.asList(mimeType), charset, fileExtensions);
+		this(name, List.of(mimeType), charset, fileExtensions);
 	}
 
 	/**
