@@ -13,6 +13,7 @@ import java.time.Instant;
 import java.util.Arrays;
 import java.util.Date;
 import java.util.Iterator;
+import java.util.List;
 
 import org.eclipse.rdf4j.common.iteration.CloseableIteration;
 import org.eclipse.rdf4j.model.Value;
@@ -127,7 +128,7 @@ public class OrderComparatorTest {
 	@Test
 	public void testEquals() throws Exception {
 		order.addElement(asc);
-		cmp.setIterator(Arrays.asList(ZERO).iterator());
+		cmp.setIterator(List.of(ZERO).iterator());
 		OrderComparator sud = new OrderComparator(strategy, order, cmp, context);
 		assertTrue(sud.compare(null, null) == 0);
 	}
@@ -153,7 +154,7 @@ public class OrderComparatorTest {
 	@Test
 	public void testAscLessThan() throws Exception {
 		order.addElement(asc);
-		cmp.setIterator(Arrays.asList(NEG).iterator());
+		cmp.setIterator(List.of(NEG).iterator());
 		OrderComparator sud = new OrderComparator(strategy, order, cmp, context);
 		assertTrue(sud.compare(null, null) < 0);
 	}
@@ -161,7 +162,7 @@ public class OrderComparatorTest {
 	@Test
 	public void testAscGreaterThan() throws Exception {
 		order.addElement(asc);
-		cmp.setIterator(Arrays.asList(POS).iterator());
+		cmp.setIterator(List.of(POS).iterator());
 		OrderComparator sud = new OrderComparator(strategy, order, cmp, context);
 		assertTrue(sud.compare(null, null) > 0);
 	}
@@ -169,7 +170,7 @@ public class OrderComparatorTest {
 	@Test
 	public void testDescLessThan() throws Exception {
 		order.addElement(desc);
-		cmp.setIterator(Arrays.asList(NEG).iterator());
+		cmp.setIterator(List.of(NEG).iterator());
 		OrderComparator sud = new OrderComparator(strategy, order, cmp, context);
 		assertTrue(sud.compare(null, null) > 0);
 	}
@@ -177,7 +178,7 @@ public class OrderComparatorTest {
 	@Test
 	public void testDescGreaterThan() throws Exception {
 		order.addElement(desc);
-		cmp.setIterator(Arrays.asList(POS).iterator());
+		cmp.setIterator(List.of(POS).iterator());
 		OrderComparator sud = new OrderComparator(strategy, order, cmp, context);
 		assertTrue(sud.compare(null, null) < 0);
 	}
