@@ -12,7 +12,6 @@ import static org.junit.Assert.assertEquals;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
 import java.util.List;
 
 import org.eclipse.rdf4j.model.impl.SimpleValueFactory;
@@ -45,9 +44,9 @@ public class SPARQLTSVCustomTest {
 	@Ignore("This test does not work with RDF-1.1")
 	@Test
 	public void testSES2126QuotedLiteralIntegerAsStringExplicitType() throws Exception {
-		List<String> bindingNames = Arrays.asList("test");
+		List<String> bindingNames = List.of("test");
 		TupleQueryResult tqr = new IteratingTupleQueryResult(bindingNames,
-				Arrays.asList(new ListBindingSet(bindingNames,
+				List.of(new ListBindingSet(bindingNames,
 						SimpleValueFactory.getInstance().createLiteral("1", XSD.STRING))));
 		String result = writeTupleResult(tqr);
 		assertEquals("?test\n\"1\"^^<http://www.w3.org/2001/XMLSchema#string>\n", result);
@@ -60,9 +59,9 @@ public class SPARQLTSVCustomTest {
 	 */
 	@Test
 	public void testSES2126QuotedLiteralIntegerAsStringImplicitType() throws Exception {
-		List<String> bindingNames = Arrays.asList("test");
+		List<String> bindingNames = List.of("test");
 		TupleQueryResult tqr = new IteratingTupleQueryResult(bindingNames,
-				Arrays.asList(new ListBindingSet(bindingNames, SimpleValueFactory.getInstance().createLiteral("1"))));
+				List.of(new ListBindingSet(bindingNames, SimpleValueFactory.getInstance().createLiteral("1"))));
 		String result = writeTupleResult(tqr);
 		assertEquals("?test\n\"1\"\n", result);
 	}
