@@ -7,7 +7,7 @@
  *******************************************************************************/
 package org.eclipse.rdf4j.workbench.base;
 
-import java.util.Arrays;
+import java.util.List;
 
 import javax.servlet.http.HttpServletResponse;
 
@@ -42,7 +42,7 @@ public abstract class TupleServlet extends TransformationServlet {
 				builder.transform(xslPath, xsl);
 			}
 			builder.start(variables);
-			builder.link(Arrays.asList("info"));
+			builder.link(List.of("info"));
 			this.service(req, resp, builder, con);
 			builder.end();
 		} finally {
