@@ -8,7 +8,7 @@
 package org.eclipse.rdf4j.workbench.commands;
 
 import java.io.IOException;
-import java.util.Arrays;
+import java.util.List;
 
 import javax.servlet.http.HttpServletResponse;
 
@@ -45,7 +45,7 @@ public class ClearServlet extends TransformationServlet {
 			TupleResultBuilder builder = getTupleResultBuilder(req, resp, resp.getOutputStream());
 			builder.transform(xslPath, "clear.xsl");
 			builder.start("error-message", CONTEXT);
-			builder.link(Arrays.asList(INFO));
+			builder.link(List.of(INFO));
 			builder.result(exc.getMessage(), req.getParameter(CONTEXT));
 			builder.end();
 		}
@@ -57,7 +57,7 @@ public class ClearServlet extends TransformationServlet {
 		// TupleResultBuilder builder = new TupleResultBuilder(out);
 		builder.transform(xslPath, "clear.xsl");
 		builder.start();
-		builder.link(Arrays.asList(INFO));
+		builder.link(List.of(INFO));
 		builder.end();
 	}
 
